@@ -111,6 +111,17 @@ public abstract class CachingDirectoryFactory extends DirectoryFactory {
     synchronized (this) {
       for (CacheValue val : byDirectoryCache.values()) {
         try {
+          // if there are still refs out, we have to wait for them
+          int cnt = 0;
+          while(val.refCnt != 0) {
+            wait(100);
+            
+            if (cnt++ >= 100*10*30) {
+              log.error("Timeout waiting for all directory ref counts to be released");
+              break;
+            }
+          }
+          
           assert val.refCnt == 0 : val.refCnt;
           val.directory.close();
         } catch (Throwable t) {
